# dapr-rabbitmq-resilience-test

./: LICENSE  README.md  pyproject.toml
local_dev/components/: pubsub.yml  subscription.yml
src/: main.py  run_main.py
