[tool.poetry]
name = "dapr-rabbitmq-resilience-test"
version = "0.1.0"
description = ""
authors = ["Trond Hindenes <trond@hindenes.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.113.0"}
uvicorn = "*"
httpx = "^0.27.2"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
